# cdmifs

./: configure.ac
src/: Makefile.am  cdmi.c  cdmi.h  cdmifs.c  common.h  mime.h  util.c
src/fs/: attr.c  directory.c  write.c
